crates/biome_cli/tests/snapshots/main_commands_inspect_config/root_value_uses_diagnostic_output.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config linter.rules.suspicious.noDebugger
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "error"
      }
    }
  }
}
```

# Emitted Messages

```block
biome.json:5:23 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key linter.rules.suspicious.noDebugger has the following value.
  
    3 │     "rules": {
    4 │       "suspicious": {
  > 5 │         "noDebugger": "error"
      │                       ^^^^^^^
    6 │       }
    7 │     }
  
  i This value is provided by the root configuration.
  

```
