crates/biome_cli/tests/snapshots/main_commands_inspect_config/runtime_ignored_override_keeps_base_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config javascript.resolver.experimentalPnpmCatalogs --path=file.js
```

## `biome.json`

```json
{
  "javascript": {
    "resolver": { "experimentalPnpmCatalogs": false }
  },
  "overrides": [
    {
      "includes": ["**/*.js"],
      "javascript": {
        "resolver": { "experimentalPnpmCatalogs": true }
      }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:3:47 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key javascript.resolver.experimentalPnpmCatalogs has the following value.
  
    1 │ {
    2 │   "javascript": {
  > 3 │     "resolver": { "experimentalPnpmCatalogs": false }
      │                                               ^^^^^
    4 │   },
    5 │   "overrides": [
  
  i This value is provided by the root configuration.
  

```
