crates/biome_cli/tests/snapshots/main_commands_inspect_config/typed_merge_preserves_extended_shorthand_origin.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config linter.rules.suspicious.noConsole
```

## `biome.json`

```json
{
  "extends": ["base.json"],
  "linter": {
    "rules": {
      "suspicious": { "noDebugger": "off" }
    }
  }
}
```

## `base.json`

```json
{
  "linter": {
    "rules": { "suspicious": "error" }
  }
}
```

# Emitted Messages

```block
base.json:3:30 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key linter.rules.suspicious.noConsole has the following value.
  
    1 │ {
    2 │   "linter": {
  > 3 │     "rules": { "suspicious": "error" }
      │                              ^^^^^^^
    4 │   }
    5 │ }
  
  i This value comes from base.json, extended by biome.json.
  

```
