crates/biome_cli/tests/snapshots/main_commands_inspect_config/yaml_formatter_override_matches_runtime.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "yaml": { "formatter": { "indentWidth": 2 } },
  "overrides": [
    {
      "includes": ["**/*.yaml"],
      "yaml": { "formatter": { "indentWidth": 4 } }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:6:47 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key yaml.formatter.indentWidth has the value 4.
  
    4 │     {
    5 │       "includes": ["**/*.yaml"],
  > 6 │       "yaml": { "formatter": { "indentWidth": 4 } }
      │                                               ^
    7 │     }
    8 │   ]
  
  i This value is provided by override 0 in the root configuration.
  
  i The override matched file.yaml using **/*.yaml.
  

```
